[package]
name = "wal"
version = "0.1.2"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://qdrant.tech/"
repository = "https://github.com/qdrant/wal"
edition = "2021"

[dependencies]
byteorder = "1.5"
crc32c = "0.6.8"
log = "0.4"
memmap2 = "0.9.4"
rand = "0.9.0"
rand_distr = "0.4.3"
fs4 = "0.12.0"
# fs4 depends on rustix, but pulling this dependency explicitly into the tree
# to use direct functions on FreeBSD
rustix = { version = "0", features = [ "fs" ]}
crossbeam-channel = "0.5"

# Binary dependencies
docopt = "1.1"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
crc = "3.2.1"
hdrhistogram = "7.5.4"
quickcheck = "1.0.3"
regex = "1.10.6"
tempfile = "3.12.0"
chrono = "0.4.38"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
